# Animation-Engine

./: .gitignore  README.md  Task_List.md  assessment27.md  planv1.md  program_assessment.md  pyproject.toml  run_animation_engine_windows.bat  taskplanorder.md
animation_engine/: __init__.py  backend.py  cli.py
animation_engine/animation/: __init__.py  blend_tree.py  channel.py  clip.py  ik_solver.py  keyframe.py  morph_track.py
animation_engine/editor/: __init__.py  main.py  state.py
animation_engine/gui/: __init__.py  production_pack_gui.py
animation_engine/integration/: __init__.py  asset_pipeline.py  style_profiles.py
animation_engine/io/: __init__.py  anim_format.py  gltf.py
animation_engine/math_utils/: __init__.py  matrix.py  quaternion.py  transform.py  vector.py
animation_engine/model/: __init__.py  material.py  mesh.py  model.py  skeleton.py
animation_engine/qa/: __init__.py  clip_validator.py  loop_analyzer.py  skeleton_validator.py  style_validator.py
animation_engine/runtime/: __init__.py  animator.py  skinning.py
assets/: hero_source.anim
assets/hero_pack/: aerial_attack.anim  attack.anim  attack_combo_1.anim  attack_combo_2.anim  attack_combo_3.anim  backstep.anim  block.anim  block_break.anim  cast.anim  cast_channel.anim  cast_release.anim  climb_loop.anim  climb_start.anim  climb_stop.anim  death.anim  (+43 more)
compat/: GameEngineCompat.hpp  README.md  __init__.py  anim_to_cpp_header.py
tests/: __init__.py  test_animation.py  test_backend_qa_integration.py  test_compat.py  test_editor_state.py  test_io.py  test_math_utils.py  test_model.py
