[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animation-engine"
version = "2.0.0"
description = "Skeletal animation and morph target system for GameRewritten"
authors = [{name = "Mikester9000"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
gltf = ["pygltflib>=1.16"]
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
animation-engine = "animation_engine.cli:main"
animation-engine-gui = "animation_engine.gui.production_pack_gui:main"
animation-engine-editor = "animation_engine.editor.main:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["animation_engine*", "compat*"]
